# new_Zadanie_new_Ispytanie

./: CMakeLists.txt  main.cpp
headers/: ClassP.h
realisation/: ClassP.cpp
